components/layouts/panel/panel.module.css
.panel {
    height: 100%;
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: auto 1fr;
    grid-template-areas: "title title"
        "nav content";
    place-content: initial;
}

@media screen and (max-width: 1280px) {
    .panel {
        grid-template-columns: 1fr;
        grid-template-rows: auto auto 1fr;
        grid-template-areas: "title"
            "nav"
            "content";
    }
}


.panel__section {
    grid-area: content;
    opacity: 0;
    height: 100%;
}

.progress {
    margin-inline: auto;
    align-self: center;
    grid-area: nav;
}

.progress__list {
    margin-block: 0;
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
    gap: .1875rem;
}

@media screen and (min-width: 1280px) {
    .progress__list {
        flex-direction: column;
        justify-content: center;
    }

}

.progress__button {
    --padding-inline: .5rem;
    --outline-color: var(--primary-800);

    padding-inline: 0;
    text-transform: capitalize;
    border-radius: 0.5rem;
    background-color: transparent;
    border: 1px solid transparent;
    appearance: none;
    transition: opacity 120ms ease;
    display: inline-flex;
    align-items: center;
    color: inherit;
    justify-content: center;
    font-weight: 600;
}

@media screen and (min-width: 1280px) {
    .progress__button {
        --padding-inline: 1rem;
    }
}

.progress__button svg {
    --icon-size: 1.2rem;
}

.progress__button--next {
    margin-inline-start: var(--padding-inline);
}

.progress__button--prev {
    margin-inline-end: var(--padding-inline);
}

.progress__button:disabled {
    color: var(--secondary-300);
    cursor: not-allowed;
}

.progress__item-button {
    --button-size: 1.8rem;
    --button-text-clr: currentColor;
    --button-border-size: .1125rem;

    position: relative;
    width: var(--button-size);
    height: 100%;
    aspect-ratio: 1/1;
    padding: .0625rem;
    color: var(--button-text-clr);
    font-size: var(--fs-300);
    font-weight: 500;
    border: 1px solid transparent;
    background-color: transparent;
    cursor: pointer;
    appearance: none;
}

@media screen and (min-width: 768px) {
    .progress__item-button {
        --button-size: 2rem;
    }

}

@media screen and (min-width: 1280px) {
    .progress__item-button {
        --button-size: 2.5rem;
        font-size: var(--fs-400);
    }

}

.progress__item-button[aria-selected="true"] {
    --button-text-clr: var(--accent);
}

.progress__list li:not(:nth-last-child(-n+2)) .progress__item-button {
    border-right: var(--button-border-size) solid currentColor;
}

@media screen and (min-width: 1280px) {
    .progress__list li:not(:nth-last-child(-n+2)) .progress__item-button {
        border-right: none;
        border-bottom: var(--button-border-size) solid currentColor;
    }


}

.progress__item-button:focus-visible {
    --outline-color: var(--accent-dark);
    --button-clr: color-mix(in srgb, var(--accent) 80%, white 20%);
}

div.footer__nav-tooltip {
    --tooltip-bg: var(--accent);
}

